components/dc-metro-map/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: appstudio
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: dc-metro-map
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldc-metro-map
  namespace: shebert
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-dc-metro-map
    weight: null
status: {}
